# web3-points-full

./: .gitignore  README.md  package-lock.json  package.json
backend-rust/: Cargo.toml  README.md
backend-rust/src/: main.rs
contracts_project/: README.md  hardhat.config.js  package-lock.json  package.json
contracts_project/contracts/: PointsToken.sol
contracts_project/scripts/: deploy.js
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
