[package]
name = "points-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
dotenv = "0.15"